# cat-guard

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  INSTRUCTIONS.local.md  INSTRUCTIONS.md  README.md  TODO.md  build.bat  build.ps1  build.sh  catguard.spec  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh
.claude/commands/: speckit.checklist.md
.github/agents/: copilot-instructions.md  speckit.checklist.agent.md  speckit.specify.agent.md
.github/workflows/: build.yml  ci.yml
.specify/memory/: constitution.md
specs/001-catguard-app/: data-model.md  plan.md  quickstart.md  spec.md
specs/002-tray-open-mainwindow/: plan.md  quickstart.md  spec.md  tasks.md
specs/003-cat-detection-screenshots/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/004-add-record-sound/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-alert-effectiveness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-pause-continue-tracking/: ANALYSIS.md  OPTIMIZATIONS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-misc-improvements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-add-photo-action-panel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-self-executable-build/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-move-to-onnxruntime/: implementation.md  plan.md
specs/011-log-viewer-search/: data-model.md  plan.md  quickstart.md  (+3 more)
tests/: conftest.py
(+124 files in other folders)
