[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catguard"
version = "0.4.0"
description = "Webcam-based cat detection and alert app"
requires-python = ">=3.14"
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python>=4.9.0",
    "pystray>=0.19.4",
    "Pillow>=10.0.0",
    "pygame-ce>=2.5.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
win32 = ["pywin32>=306"]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]
build = ["pyinstaller>=6.0", "pyinstaller-hooks-contrib>=2024.0"]

[project.scripts]
catguard = "catguard.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
]
addopts = "-v"
